fix(paragraph): adjascent block margins should overflow eachother

--- a/src/components/gds-paragraph/gds-paragraph.scss
+++ b/src/components/gds-paragraph/gds-paragraph.scss
@@ -1,16 +1,22 @@
 @use "index" as *;
 
-.gds-paragraph-l {
+:host {
   display: block;
-  @include size-l;
-}
+  margin-block-start: var(--paragraph-gutter);
+  margin-block-end: var(--paragraph-gutter);
 
-.gds-paragraph-m {
-  display: block;
   @include size-m;
 }
 
-.gds-paragraph-s {
-  display: block;
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+:host-context([size='l']) {
+  @include size-l;
+}
+
+:host-context([size='s']) {
   @include size-s;
 }
